change for first form

--- a/templates/admin/trick/_form.html.twig
+++ b/templates/admin/trick/_form.html.twig
@@ -1,5 +1,8 @@
 {{ form_row(form.title) }}
 {{ form_row(form.description) }}
+{{ form_row(form.metatitle) }}
+{{ form_row(form.metadescription) }}
+{{ form_row(form.is_valid) }}
 <button class="btn btn-primary btn-add" type="button" data-target="#images">Ajouter une image</button>
 <div
         id="images"
