--- a/templates/admin/trick/_form.html.twig
+++ b/templates/admin/trick/_form.html.twig
@@ -2,6 +2,7 @@
 {{ form_row(form.description) }}
 {{ form_row(form.metatitle) }}
 {{ form_row(form.metadescription) }}
+{{ form_row(form.groupTricks) }}
 <button class="btn btn-primary btn-add" type="button" data-target="#images">Ajouter une image</button>
 <div
         id="images"
