--- a/templates/admin/trick/_form.html.twig
+++ b/templates/admin/trick/_form.html.twig
@@ -1,4 +1,5 @@
 {{ form_row(form.title) }}
+{{ form_row(form.is_valid) }}
 {{ form_row(form.description) }}
 {{ form_row(form.metatitle) }}
 {{ form_row(form.metadescription) }}
