--- a/templates/admin/comment/update.html.twig
+++ b/templates/admin/comment/update.html.twig
@@ -8,7 +8,7 @@
                 {{ form_start(form) }}
                     {{ form_widget(form._token) }}
                     <div class="card-body">
-                        {{ include("admin/trick/_form.html.twig", { form: form }) }}
+                        {{ include("admin/comment/_form.html.twig", { form: form }) }}
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-block btn-lg btn-primary">Modifier</button>
