--- a/templates/admin/trick/video.html.twig
+++ b/templates/admin/trick/video.html.twig
@@ -1,5 +1,5 @@
-<div id="image-{{ form.vars.name }}" >
-    {{ form_row(form.uploadedFile) }}
+<div id="video-{{ form.vars.name }}">
+    {{ form_row(form.uri) }}
     <button class="btn btn-danger btn-remove" type="button" data-target="#image-{{ form.vars.name }}">
         Supprimer
     </button>
