change all is_valid

--- a/templates/admin/trick/_form.html.twig
+++ b/templates/admin/trick/_form.html.twig
@@ -1,6 +1,6 @@
 
 {{ form_row(form.title) }}
-{{ form_row(form.is_valid) }}
+{{ form_row(form.isvalid) }}
 {{ form_row(form.description) }}
 {{ form_row(form.metatitle) }}
 {{ form_row(form.metadescription) }}
