--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,6 +51,10 @@
                 $($(this).data("target")).remove();
             });
         });
+        $(document).on('change', '.custom-file-input', function () {
+            let fileName = $(this).val().replace(/\\/g, '/').replace(/.*\//, '');
+            $(this).parent('.custom-file').find('.custom-file-label').text(fileName);
+        });
     </script>
 {% endblock %}
 </body>
