--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
     {% endblock %}
     <title>{% block title %}Welcome!{% endblock %}</title>
+    <link href="{{ asset('css/custom.css') }}" rel="stylesheet" />
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -58,6 +62,27 @@
         $(document).on('change', '.custom-file-input', function () {
             let fileName = $(this).val().replace(/\\/g, '/').replace(/.*\//, '');
             $(this).parent('.custom-file').find('.custom-file-label').text(fileName);
+        });
+        $( document ).ready(function() {
+            $("div.trick").slice(5, $("div.trick").length).hide();
+        });
+        $(function () {
+            $("div.trick").slice(0, 6).show();
+            $("#loadMoreTrick").on('click', function (e) {
+                e.preventDefault();
+                $("div.trick:hidden").slice(0, 6).slideDown();
+                if ($("div.trick:hidden").length == 0) {
+                    $("#loadMoreTrick").hide('slow');
+                    $("#loadLessTrick").show('slow');
+                }
+            });
+            $("#loadLessTrick").on('click', function (e) {
+                e.preventDefault();
+                $("div.trick").slice(6, $("div.trick").length).hide();
+                $("#loadLessTrick").hide('slow');
+                $("#loadMoreTrick").show('slow');
+
+            });
         });
     </script>
 {% endblock %}
