--- a/templates/parts/home_slider_block.html.twig
+++ b/templates/parts/home_slider_block.html.twig
@@ -1,22 +1,7 @@
 {% extends 'pages/home.html.twig' %}
 {% block slider %}
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <p style="position: absolute;
-top: 0;
-bottom: 0;
-z-index: 1;
-display: -ms-flexbox;
-display: flex;
--ms-flex-align: center;
-align-items: center;
--ms-flex-pack: center;
-justify-content: center;
-width: 100%;
-color:
-#fff;
-text-align: center;
-opacity: .5;
-transition: opacity .15s ease;">accroche</p>
+
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -41,9 +26,6 @@ transition: opacity .15s ease;">accroche</p>
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-    <p class="carousel-control-next" href="#carouselExampleIndicators">
-        <span class="sr-only">Next</span>
-    </p>
-    <a id="gototricks" href="#tricks"><i class="fas fa-arrow-down fa-3x"></i></a>
+    <p class="accroche">accroche</p>
 </div>
 {% endblock %}
