--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row justify-content-center m-3">
                 <a href="#" id="loadMoreTrick"><i class="fas fa-plus-circle fa-3x"></i></a>
-                <a href="#" id="loadLessTrick"><i class="fas fa-minus-circle fa-3x"></i></a>
+                {#<a href="#" id="loadLessTrick"><i class="fas fa-minus-circle fa-3x"></i></a>#}
             </div>
         </div>
     </div>
