--- a/templates/parts/home_tricks_block.html.twig
+++ b/templates/parts/home_tricks_block.html.twig
@@ -3,7 +3,7 @@
 
     <div class="container mx-auto row my-3 ">
         {% for trick in tricks  %}
-        <div class=" col-sm-3 trick">
+        <div class=" col-sm-6 col-md-3 trick">
             <h3 class="text-center">{{ trick.title }}</h3>
             <img src="https://picsum.photos/1024/502" class="card-img-top" alt="...">
             <div class="card-body">
