--- a/templates/admin/trick/_form.html.twig
+++ b/templates/admin/trick/_form.html.twig
@@ -1,10 +1,10 @@
 
 {{ form_row(form.title) }}
-{{ form_row(form.isvalid) }}
+{{ form_row(form.valid) }}
 {{ form_row(form.description) }}
 {{ form_row(form.metatitle) }}
 {{ form_row(form.metadescription) }}
-{{ form_row(form.groupe) }}
+{{ form_row(form.group) }}
 <button class="btn btn-primary btn-add" type="button" data-target="#images">Ajouter une image</button>
 <div
         id="images"
