--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,9 +28,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path("home") }}">Tricks</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sign in</a>
-                </li>
+                {% if is_granted('ROLE_ADMIN') == false %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign up</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign out</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
 
