--- a/templates/pages/trick/show.html.twig
+++ b/templates/pages/trick/show.html.twig
@@ -19,13 +19,16 @@
     </div>
     <div class="container my-3">
         {{ trick.description }}
-        <div class="col-sm-2 text-center">Auteur</div>
-        {#
-        <div class="col-sm-2 text-center">{{ trick.group }}</div>
+    </div>
 
-        <div class="col-sm-2 text-center">{{ trick.dateUpdate }}</div>
-        #}
-        <div class="col-sm-2 text-center"></div>
+    <div class="container my-3">
+        <div class="col-sm-2 text-center">Auteur</div>
+
+        <div class="col-sm-2 text-center">{{ trick.group.name}}</div>
+
+        <div class="col-sm-2 text-center">{{ trick.dateAdd|date('Y-m-d') }}</div>
+
+        <div class="col-sm-2 text-center">{{ trick.dateUpdate|date('Y-m-d') }}</div>
     </div>
 
     <div class="container mx-auto row my-3 ">
