--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
     <link href="{{ asset('css/custom.css') }}" rel="stylesheet" />
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-bs4.css" rel="stylesheet">
 
 </head>
 <body>
@@ -23,9 +24,6 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path("home") }}">Home</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{{ path("home") }}">Tricks</a>
                 </li>
                 {% if is_granted('ROLE_ADMIN') == false %}
@@ -36,6 +34,9 @@
                         <a class="nav-link" href="#">Sign up</a>
                     </li>
                 {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path("trick_create") }}">Add trick</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sign out</a>
                     </li>
@@ -50,6 +51,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-bs4.js"></script>
     <script>
         var left = 0;
         var max_length = document.getElementsByClassName('trick_item').length;
@@ -108,8 +110,18 @@
 
             });
         });
-
-
+        $( document ).ready(function() {
+        $('#trick_description').summernote(
+            {
+                placeholder: 'Saisissez ici votre chapo et mettez le en page',
+            }
+        );
+        $('#trick_metadescription').summernote(
+            {
+                placeholder: 'Saisissez ici votre contenu et mettez le en page Pas d\'image',
+            }
+        );
+        })
     </script>
 {% endblock %}
 </body>
