--- a/templates/pages/trick/show.html.twig
+++ b/templates/pages/trick/show.html.twig
@@ -19,18 +19,21 @@
     </div>
     <div class="container my-3">
         {{ trick.description }}
+
+
+        <div class="flex my-3">
+            <div class="col-sm-2 mx-auto bg-secondary text-white text-center">Auteur</div>
+
+            <div class="col-sm-2 mx-auto bg-secondary text-white text-center">Groupe : {{ trick.group.name}}</div>
+
+            <div class="col-sm-2 mx-auto bg-secondary text-white text-center">Créé le : {{ trick.dateAdd|date('Y-m-d') }}</div>
+
+            <div class="col-sm-2 mx-auto bg-secondary text-white text-center">Dernière modification : {{ trick.dateUpdate|date('Y-m-d') }}</div>
+        </div>
     </div>
-
-    <div class="container my-3">
-        <div class="col-sm-2 text-center">Auteur</div>
-
-        <div class="col-sm-2 text-center">{{ trick.group.name}}</div>
-
-        <div class="col-sm-2 text-center">{{ trick.dateAdd|date('Y-m-d') }}</div>
-
-        <div class="col-sm-2 text-center">{{ trick.dateUpdate|date('Y-m-d') }}</div>
-    </div>
-
+    {% if is_granted('ROLE_ADMIN') == false %}
+        {{ include("admin/comment/_form.html.twig") }}
+    {% endif %}
     <div class="container mx-auto row my-3 ">
         {% for comment in trick.comments  %}
             <div class=" col-sm-12 trick">
