--- a/templates/parts/home_tricks_block.html.twig
+++ b/templates/parts/home_tricks_block.html.twig
@@ -14,9 +14,25 @@
             <div class="card-footer mt-2 text-right">
                 <a class="mx-1" href="{{ path('trick_update',{id: trick.id}) }}"><i class="fa fa-pen" aria-hidden="true"></i>
                 </a>
-                <a class="mx-1" href="{{ path('trick.delete',{slug: trick.slug}) }}"><i class="fa fa-trash" aria-hidden="true"></i>
+                <a class="mx-1" href="javascript:void(0)" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-trash" aria-hidden="true"></i>
                 </a>
             </div>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Erase this trick</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-footer">
+                                <a class="mx-1 btn btn-danger" href="{{ path('trick.delete',{slug: trick.slug}) }}">YES</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         {% endif %}
         </div>
         {% endfor %}
