--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sign up</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path("trick_create") }}">Add trick</a>
+                    </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path("trick_create") }}">Add trick</a>
