--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,22 +26,19 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path("home") }}">Tricks</a>
                 </li>
-                {% if is_granted('ROLE_ADMIN') == false %}
+                {% if is_granted('ROLE_USER') == false %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign in</a>
+                        <a class="nav-link" href="{{ path("login") }}">Sign in</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path("trick_create") }}">Add trick</a>
+                        <a class="nav-link" href="{{ path("login") }}">Sign up</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path("trick_create") }}">Add trick</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign out</a>
+                        <a class="nav-link" href="{{ path("logout") }}">Sign out</a>
                     </li>
                 {% endif %}
             </ul>
