--- a/templates/pages/login/form.html.twig
+++ b/templates/pages/login/form.html.twig
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-sm-5">
             <div class="well">
-                <form action="{{ path('security_login') }}" method="post">
+                <form action="{{ path('login') }}" method="post">
                     <fieldset>
                         <legend><i class="fa fa-lock" aria-hidden="true"></i> {{ 'title.login'|trans }}</legend>
                         <div class="form-group">
