--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,21 +24,21 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path("home") }}">Tricks</a>
+                    <a class="nav-link" href="{{ path("home") }}">Accueil</a>
                 </li>
                 {% if is_granted('ROLE_USER') == false %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path("login") }}">Sign in</a>
+                        <a class="nav-link" href="{{ path("login") }}">inscription</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path("login") }}">Sign up</a>
+                        <a class="nav-link" href="{{ path("login") }}">Connexion</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path("trick_create") }}">Add trick</a>
+                        <a class="nav-link" href="{{ path("trick_create") }}">Ajouter un trick</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path("logout") }}">Sign out</a>
+                        <a class="nav-link" href="{{ path("logout") }}">Déconnexion</a>
                     </li>
                 {% endif %}
             </ul>
