--- a/templates/pages/login/create_form.html.twig
+++ b/templates/pages/login/create_form.html.twig
@@ -4,9 +4,11 @@
 {% block body %}
 
 <div class="container">
+    {{ form_start(form) }}
     {{ form_row(form.username) }}
     {{ form_row(form.email) }}
     {{ form_row(form.password) }}
     <button class="btn btn-block btn-lg btn-primary">Créer</button>
+    {{ form_end(form, { render_rest: false }) }}
 </div>
 {% endblock %}
