--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
                 </li>
                 {% if is_granted('ROLE_USER') == false %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path("login") }}">inscription</a>
+                        <a class="nav-link" href="{{ path("createUser") }}">inscription</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path("login") }}">Connexion</a>
