--- a/templates/pages/login/create_form.html.twig
+++ b/templates/pages/login/create_form.html.twig
@@ -9,6 +9,6 @@
     {{ form_row(form.email) }}
     {{ form_row(form.password) }}
     <button class="btn btn-block btn-lg btn-primary">Créer</button>
-    {{ form_end(form, { render_rest: false }) }}
+    {{ form_end(form) }}
 </div>
 {% endblock %}
