--- a/templates/pages/login/form.html.twig
+++ b/templates/pages/login/form.html.twig
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-sm-5">
             <div class="well">
-                <form action="{{ path('login') }}" method="post">
+                <form action="{{ path('login') }}" method="post" name="login_form">
                     <fieldset>
                         <legend><i class="fa fa-lock" aria-hidden="true"></i> {{ 'title.login'|trans }}</legend>
                         <div class="form-group">
@@ -24,10 +24,11 @@
                         </div>
                         <input type="hidden" name="_target_path" value="{{ app.request.get('redirect_to') }}"/>
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
-                        <button type="submit" class="btn btn-primary">
+                        <button type="submit" name="login_form[submit]"class="btn btn-primary">
                             <i class="fa fa-sign-in" aria-hidden="true"></i> {{ 'action.sign_in'|trans }}
                         </button>
                     </fieldset>
+                    {{ form_rest(form) }}
                 </form>
             </div>
         </div>
