--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -21,6 +21,26 @@
             <a href="#tricks"><i class="fas fa-chevron-up fa-2x chevron-down"></i></a>
         </div>
         <div class="container">
+            {% if max_page > 1 %}{{ max_page }}
+                <ul class="pagination pagination-sm">
+                    {# `«` arrow  #}
+                    <li {{ current_page == 1 ? 'class="disabled"' }}>
+                        <a href="{{ path('home', {page: current_page-1 < 1 ? 1 : current_page-1}) }}">«</a>
+                    </li>
+
+                    {# Render each page number #}
+                    {% for i in 1..max_page %}
+                        <li {{ current_page == i ? 'class="active"' }}>
+                            <a href="{{ path('home', {page: i}) }}">{{ i }}</a>
+                        </li>
+                    {% endfor %}
+
+                    {# `»` arrow #}
+                    <li {{ current_page == max_page ? 'class="disabled"' }}>
+                        <a href="{{ path('home', {page: current_page+1 <= max_page ? current_page+1 : current_page}) }}">»</a>
+                    </li>
+                </ul>
+            {% endif %}
             <div class="row justify-content-center m-3">
                 <a href="#" id="loadMoreTrick"><i class="fas fa-plus-circle fa-3x"></i></a>
                 {#<a href="#" id="loadLessTrick"><i class="fas fa-minus-circle fa-3x"></i></a>#}
