--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -99,11 +99,10 @@
             );
             $("#loadMoreTrick").click(function(){
                 page++;
-                console.log(page);
                 $.ajax({
                     url : "{{ path('moretricks') }}",
-                    type : 'POST',
-                    data : 'page='+page,
+                    type : 'GET',
+                    data : {'page' : page},
                     dataType : 'html',
                     success : function(code_html, statut){
                         $("#forTricks").append(code_html);
