Create llast handlller

--- a/templates/pages/trick/show.html.twig
+++ b/templates/pages/trick/show.html.twig
@@ -44,7 +44,7 @@
 
     {% endif %}
     <div id="forComments" class="container mx-auto row my-3 ">
-        {% for comment in displayedcomments  %}
+        {% for comment in displayedComments  %}
             <div class=" col-sm-12 trick">
                 {#
                 <h3>{{ comment.dateAdd }}</h3>
