--- a/templates/parts/forcomments.html.twig
+++ b/templates/parts/forcomments.html.twig
@@ -1,4 +1,4 @@
-{% for comment in displayedcomments  %}
+{% for comment in displayedComments  %}
     <div class=" col-sm-12 trick">
         {#
         <h3>{{ comment.dateAdd }}</h3>
