--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -56,3 +56,4 @@
     scrollbar-highlight-color:black;
 } /* this targets the default scrollbar (compulsory) */
 
+#logo{height : 5vh; width : auto;}
