--- a/templates/parts/fortricks.html.twig
+++ b/templates/parts/fortricks.html.twig
@@ -2,7 +2,7 @@
 {% for trick in tricks  %}
     <div class=" col-sm-6 col-md-3 trick">
         <h3 class="text-center">{{ trick.title }}</h3>
-        <img src="https://picsum.photos/1024/502" class="card-img-top" alt="...">
+        <img src="{{ path('') }}" class="card-img-top" alt="...">
         <div class="card-body">
             <p class="card-text">{{ trick.description|slice(0,50) }}...</p>
             <a class="float-right" href="{{ path('trick.show',{slug: trick.slug}) }}" title="voir {{ trick.title }}">Voir plus</a>
