--- a/templates/parts/home_slider_block.html.twig
+++ b/templates/parts/home_slider_block.html.twig
@@ -8,6 +8,9 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
+        {#
+        for image in images
+        #}
         <div class="carousel-item active">
             <img src="https://picsum.photos/1024/500" class="d-block w-100" alt="...">
         </div>
