--- a/templates/parts/home_tricks_block.html.twig
+++ b/templates/parts/home_tricks_block.html.twig
@@ -10,7 +10,7 @@
                     <p class="card-text">{{ trick.description|slice(0,50) }}...</p>
                     <a class="float-right" href="{{ path('trick.show',{slug: trick.slug}) }}" title="voir {{ trick.title }}">Voir plus</a>
                 </div>
-                {% if is_granted('ROLE_ADMIN') == false %}
+                {% if is_granted('ROLE_ADMIN') == true %}
                     <div class="card-footer mt-2 text-right">
                         <a class="mx-1" href="{{ path('trick_update',{id: trick.id}) }}"><i class="fa fa-pen" aria-hidden="true"></i>
                         </a>
