--- a/templates/parts/forcomments.html.twig
+++ b/templates/parts/forcomments.html.twig
@@ -1,8 +1,6 @@
-{% for comment in displayedComments  %}
+{% for comment in displayedcomments  %}
     <div class=" col-sm-12 trick">
-        {#
-        <h3>{{ comment.dateAdd }}</h3>
-        #}
+
         <p class="text-center">{{ comment.comment }}</p>
     </div>
 {% endfor %}
