--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -57,3 +57,5 @@
 } /* this targets the default scrollbar (compulsory) */
 
 #logo{height : 5vh; width : auto;}
+#forTricks .trick .trick_title {font-size:16px;}
+#forTricks .trick .tricimg_trick {max-height: 100%; max-height:100%;object-fit: cover;}
