--- a/templates/parts/home_slider_block.html.twig
+++ b/templates/parts/home_slider_block.html.twig
@@ -6,20 +6,14 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner">
-        {#
-        for image in images
-        #}
-        <div class="carousel-item active">
-            <img src="https://picsum.photos/1024/500" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="https://picsum.photos/1024/502" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="https://picsum.photos/1024/501" class="d-block w-100" alt="...">
-        </div>
+        {% for image in images %}
+            <div class="carousel-item {% if loop.first %}active{% endif %}">
+                <img src="{{ asset('uploads/' ~ image.path ) }}" class="d-block w-100" alt="...">
+            </div>
+        {% endfor %}
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
