--- a/templates/parts/home_tricks_block.html.twig
+++ b/templates/parts/home_tricks_block.html.twig
@@ -4,8 +4,10 @@
     <div id="forTricks" class="container mx-auto row my-3 ">
         {% for trick in tricks  %}
             <div id="{{ trick.id }}" class=" col-sm-6 col-md-3 trick">
-                <h3 class="text-center">{{ trick.title }}</h3>
-                <img src="https://picsum.photos/1024/502" class="card-img-top" alt="...">
+                <h3 class="text-center trick_title">{{ trick.title }}</h3>
+                    {% for  image in trick.images %}
+                        {% if loop.first %}<img src="{{ asset('uploads/' ~ image.path ) }}" class="card-img-top img_trick" alt="...">{% endif %}
+                    {% endfor %}
                 <div class="card-body">
                     <p class="card-text">{{ trick.description|slice(0,50) }}...</p>
                     <a class="float-right" href="{{ path('trick.show',{slug: trick.slug}) }}" title="voir {{ trick.title }}">Voir plus</a>
