--- a/templates/pages/login/create_form.html.twig
+++ b/templates/pages/login/create_form.html.twig
@@ -10,5 +10,6 @@
     {{ form_row(form.password) }}
     <button class="btn btn-block btn-lg btn-primary">Créer</button>
     {{ form_end(form) }}
+    <a class="nav-link text-center align-center" href="{{ path("login") }}">Déjà inscrit ?</a>
 </div>
 {% endblock %}
